--- a/setup.cfg
+++ b/setup.cfg
@@ -31,8 +31,7 @@ project_urls =
 packages = find:
 install_requires =
     numpy
-    torch
-    torchvision
+    lucid==0.0.5
 
 python_requires = >=3.8
 include_package_data = True
