--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -5,7 +5,7 @@ repos:
       - id: check-docstring-first
       - id: end-of-file-fixer
       - id: trailing-whitespace
-        
+
   - repo: https://github.com/PyCQA/isort
     rev: 5.13.2
     hooks:
@@ -29,5 +29,4 @@ repos:
     hooks:
       - id: flake8
         additional_dependencies: [flake8-typing-imports>=1.9.0]
-        args: ["--ignore=E501,E203,W503"]
-  
+        args: ["--ignore=E501,E203,W503,E402,E226,F841,E722,E731"]
