--- a/setup.cfg
+++ b/setup.cfg
@@ -31,7 +31,10 @@ project_urls =
 packages = find:
 install_requires =
     numpy
-    lucid==0.0.5
+    matplotlib
+    ipywidgets
+    cachetools
+    tqdm
 
 python_requires = >=3.8
 include_package_data = True
