--- a/setup.cfg
+++ b/setup.cfg
@@ -30,6 +30,8 @@ project_urls =
 [options]
 packages = find:
 install_requires =
+    tensorflow
+    tf_slim
     numpy
     matplotlib
     ipywidgets
