complete with visualization

--- a/setup.cfg
+++ b/setup.cfg
@@ -38,6 +38,7 @@ install_requires =
     ipywidgets
     cachetools
     tqdm
+    scikit-image
 
 python_requires = >=3.8
 include_package_data = True
